# prism

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SETUP.md  TODO.md
apps/site/: Dockerfile  index.html  package-lock.json  package.json
apps/site/src/: App.tsx  index.css
apps/ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
apps/ui/src/: App.tsx  index.css
docs/: agency_pilot_brief.md  architecture.md  containerization.md  data_pipeline.md  demo_script.md  faq.md  ml_pipeline.md  responsible_ai.md
environments/: terragrunt.hcl
environments/dev/: env.hcl  terragrunt.hcl
environments/dev/alb/: terragrunt.hcl
environments/dev/cloudfront/: terragrunt.hcl
environments/dev/ecr/: .terraform.lock.hcl  terragrunt.hcl
environments/dev/ecs/: terragrunt.hcl  (+1 more)
environments/local/: .env.example  docker-compose.yml
environments/stable/: env.hcl
environments/test/: env.hcl
services/api/: .dockerignore  .env.example  Dockerfile  go.mod  go.sum  sqlc.yaml
services/ml-engine/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/ml-engine/app/: db.py  main.py  migrate.py  pipeline.py  retrain_score.py
services/ml-engine/app/features/: __init__.py  compute.py
services/ml-engine/app/geography/: seed_counties.py
services/ml-engine/app/ingestion/: __init__.py  base.py  fema.py  noaa.py  normalizer.py  pipeline.py  usgs.py
services/ml-engine/app/models/: events.py
services/ml-engine/app/scenarios/: seed_scenarios.py
services/ml-engine/app/scoring/: __init__.py  score.py  seed_history.py  train.py
(+46 files in other folders)
